Revision history for Mojo-PDF

1.001002  2015-09-24
    - Documentation corrections and clarifications (#1, #2, #3, #4, #5)

1.001001  2015-09-23
    - First version released on an unsuspecting world

